frontend/test/should_fail/pattern_006b.grg
using patt;

pattern Foo
{
	n:Node;
	
	modify(a:A, b:B) {
		a --> n <-- b;
	}	
}

rule r {
	foo:Foo();

	modify {
		a:Node;
		b:A; 
		foo(a, b);
	}
}